--- a/experience.html
+++ b/experience.html
@@ -8,15 +8,20 @@
     <link rel="icon" type="image/png" href="images/balon-falcon.png"/>
     <!-- Font Awesome -->
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro" rel="stylesheet">
-    <!-- CUSTOM CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/animation.css">
+    <link rel="stylesheet" href="css/mobile.css"> 
+    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
   </head>
   <body>
     <i class="icon-menu burger-button" id="burger-menu"></i>
     <nav class="navbar">
       <div class="container">
         <figure>
-          <img class="img-logo" src="images/baloncito.png" alt="Logo de paginaweb colocar nombre" height="40" />
+          <a href="index.html">
+            <img class="img-logo" src="images/baloncito.png" alt="logo codegol" height="40" />
+          </a>
         </figure>
        
         <nav class="menu">
@@ -34,61 +39,61 @@
         </nav> 
       </div>  
     </nav>  
-    <section class="home" id="home-exp">
+    <section class="home fadeIn" id="home-exp">
       <div class="container">
         <article class="project-exp">
-        <h3 class="titulo-exp">Experiencia</h3>
+        <h3 class="title-exp">Experiencia</h3>
         <div class="project-exp-details">
             <div class="picture">
                 <img src="images/css.png">
-                <p class="price">Css</p>
+                <p class="text-exp">Css</p>
             </div>
             <div class="picture">
                 <img src="images/html5.png">
-                <p class="price">Html</p>
+                <p class="text-exp">Html</p>
             </div>
             <div class="picture">
                 <img src="images/github.png">
-                <p class="price">Github</p>
+                <p class="text-exp">Github</p>
             </div>
             <div class="picture">
                 <img src="images/git.png">
-                <p class="price">Git</p>
+                <p class="text-exp">Git</p>
             </div>
             <div class="picture">
                 <img src="images/angular.png">
-                <p class="price">Angular</p>
+                <p class="text-exp">Angular</p>
             </div>
             <div class="picture">
                 <img src="images/material.png">
-                <p class="price">Material</p>
+                <p class="text-exp">Material</p>
             </div>
         </div>
         <hr>
         <div class="project-exp-details">
             <div class="picture">
                 <img src="images/js.png">
-                <p class="price">JavaScript</p>
+                <p class="text-exp">JavaScript</p>
             </div>
             <div class="picture">
                 <img src="images/materialize.png">
-                <p class="price">Materialize</p>
+                <p class="text-exp">Materialize</p>
             </div>
             <div class="picture">
                 <img src="images/java2x.png">
-                <p class="price">Java</p>
+                <p class="text-exp">Java</p>
             </div>
             <div class="picture">
                 <img src="images/scrumjpg.jpg">
-                <p class="price">Scrum</p>
+                <p class="text-exp">Scrum</p>
             </div>
             <div class="picture">
                 <img src="images/php.png">
-                <p class="price">Php</p>
+                <p class="text-exp">Php</p>
             </div>
             <div class="picture">
                 <img src="images/oracle.png">
-                <p class="price">Oracle</p>
+                <p class="text-exp">Oracle</p>
             </div>
         </div>
         </article>
