--- a/index.html
+++ b/index.html
@@ -8,18 +8,25 @@
     <link rel="icon" type="image/png" href="images/balon-falcon.png"/>
     <!-- Font Awesome -->
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro" rel="stylesheet">
-    <!-- CUSTOM CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/animation.css">
+    <link rel="stylesheet" href="css/mobile.css"> 
+    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+
   </head>
   <body>
-    <header class="header">
+    <header class="header fadeInDown">
       <p class="parrafo">"La disciplina, tarde o temprano, vencerá a la inteligencia o al talento"</p>
     </header>
     <i class="icon-menu burger-button" id="burger-menu"></i>
     <nav class="navbar">
       <div class="container">
         <figure>
-          <img class="img-logo" src="images/baloncito.png" alt="Logo de paginaweb colocar nombre" height="40" />
+          <a href="index.html">
+            <img class="img-logo" src="images/baloncito.png" alt="logo codegol" height="40" />
+          </a>
+          
         </figure>       
         <nav class="menu">
           <ol>
@@ -36,7 +43,7 @@
         </nav> 
       </div>  
     </nav>
-    <section class="home" id="home">
+    <section class="home fadeIn" id="home">
       <div class="container">
         <article class="project">
           <figure class="project-imageContainer">
