--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
     <nav class="navbar">
       <div class="container">
         <figure>
-          <a href="index.html">
+          <a href="index.html"> 
             <img class="img-logo" src="images/baloncito.png" alt="logo codegol" height="40" />
-          </a>
-          
+          </a>          
         </figure>       
         <nav class="menu">
           <ol>
             <li>
-              <a class="link" href="#home">Inicio</a>
+              <a class="link" href="index.html">Inicio</a>
             </li>
             <li>
               <a class="link" href="experience.html">Experiencia</a>
